category on houses added

--- a/house.html
+++ b/house.html
@@ -28,7 +28,7 @@
             <div class="collapse navbar-collapse" id="navbarNavDropdown">
                 <ul class="navbar-nav ms-auto"> <!-- Added ms-auto here -->
                     <li class="nav-item">
-                        <a class="nav-link text-primary" aria-current="page" href="properties.html">Properties</a>
+                        <a class="nav-link " aria-current="page" href="properties.html">Properties</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="agents.html">Agents</a>
@@ -46,7 +46,7 @@
                     </li>
 
                     <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
+                        <a class="nav-link text-primary dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
                             aria-expanded="false">
                             Category
                         </a>
@@ -78,9 +78,9 @@
 
     <div class="text-white bg-secondary">
         <br><br><br>
-        <h2 align="center">Properties</h2>
+        <h2 align="center">Houses</h2>
         <center>
-            <a href="index.html" class="text-white">Home</a> <big>/</big> <a href="#!" class="text-white">Properties</a> 
+            <a href="index.html" class="text-white">Home</a> <big>/</big> <a href="house.html" class="text-white">Properties</a> <big>/</big> <a href="#!" class="text-white">Houses</a>
         </center>
         <br><br><br>
     </div>
