--- a/commercial.html
+++ b/commercial.html
@@ -28,7 +28,7 @@
             <div class="collapse navbar-collapse" id="navbarNavDropdown">
                 <ul class="navbar-nav ms-auto"> <!-- Added ms-auto here -->
                     <li class="nav-item">
-                        <a class="nav-link text-primary" aria-current="page" href="properties.html">Properties</a>
+                        <a class="nav-link " aria-current="page" href="properties.html">Properties</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="agents.html">Agents</a>
@@ -46,7 +46,7 @@
                     </li>
 
                     <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
+                        <a class="nav-link text-primary dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
                             aria-expanded="false">
                             Category
                         </a>
@@ -78,9 +78,9 @@
 
     <div class="text-white bg-secondary">
         <br><br><br>
-        <h2 align="center">Properties</h2>
+        <h2 align="center">Commercial</h2>
         <center>
-            <a href="index.html" class="text-white">Home</a> <big>/</big> <a href="#!" class="text-white">Properties</a> 
+            <a href="index.html" class="text-white">Home</a> <big>/</big> <a href="house.html" class="text-white">Houses</a> <big>/</big> <a href="#!" class="text-white">Commercial</a>
         </center>
         <br><br><br>
     </div>
@@ -95,7 +95,7 @@
         <div class="row"> <!--rows starts here-->
             <div class="col-md-4"> <!--col starts here-->
                 <div class="card shadow">
-                    <img src="img/new1.jpg" class="card-img-top pro_img" alt="...">
+                    <img src="img/commercial/comm1.jpeg" class="card-img-top pro_img" alt="...">
                     <div class="card-body" style="height: 180px;">
                         <h5 class="card-title">GRA Villa</h5>
                         <p class="card-text">Some quick example text to build on the card title and make up the bulk of
@@ -118,7 +118,7 @@
 
             <div class="col-md-4"> <!--col starts here-->
                 <div class="card shadow">
-                    <img src="img/new3.jpeg" class="card-img-top pro_img" alt="...">
+                    <img src="img/commercial/comm2.jpeg" class="card-img-top pro_img" alt="...">
                     <div class="card-body" style="height: 180px;">
                         <h5 class="card-title">GRA Bencode</h5>
                         <p class="card-text">Some quick example text to build on the card title and make up the bulk of
@@ -143,7 +143,7 @@
 
             <div class="col-md-4"> <!--col starts here-->
                 <div class="card shadow">
-                    <img src="img/new2.jpeg" class="card-img-top pro_img" alt="...">
+                    <img src="img/commercial/comm3.jpeg" class="card-img-top pro_img" alt="...">
                     <div class="card-body" style="height: 180px;">
                         <h5 class="card-title"> Ebere Estate</h5>
                         <p class="card-text">Some quick example text to build on the card title and make up the bulk of
@@ -166,83 +166,7 @@
 
              <div class="col-md-4"> <!--col starts here-->
                 <div class="card shadow">
-                    <img src="img/new9.jpeg" class="card-img-top pro_img" alt="...">
-                    <div class="card-body" style="height: 180px;">
-                        <h5 class="card-title"> Ebere Estate</h5>
-                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of
-                            the card’s content.</p>
-                        <p><b>Price: $160K</b></p>
-                    </div>
-
-                    <div class="card-body">
-                        <center>
-                            <hr>
-                            <a href="#!" onclick=" buy_property('$20K', 'Ebere Estate')"
-                                class="card-link btn btn-sm btn-secondary">Buy</a>
-                            <a href="property_details.html" class="card-link btn btn-sm btn-primary">Details</a>
-                        </center>
-                    </div>
-                </div>
-            </div> <!--col starts here--> <div class="col-md-4"> <!--col starts here-->
-                <div class="card shadow">
-                    <img src="img/new4.jpg" class="card-img-top pro_img" alt="...">
-                    <div class="card-body" style="height: 180px;">
-                        <h5 class="card-title"> Ebere Estate</h5>
-                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of
-                            the card’s content.</p>
-                        <p><b>Price: $120K</b></p>
-                    </div>
-
-                    <div class="card-body">
-                        <center>
-                            <hr>
-                            <a href="#!" onclick=" buy_property('$20K', 'Ebere Estate')"
-                                class="card-link btn btn-sm btn-secondary">Buy</a>
-                            <a href="property_details.html" class="card-link btn btn-sm btn-primary">Details</a>
-                        </center>
-                    </div>
-                </div>
-            </div> <!--col starts here--> <div class="col-md-4"> <!--col starts here-->
-                <div class="card shadow">
-                    <img src="img/new8.jpg" class="card-img-top pro_img" alt="...">
-                    <div class="card-body" style="height: 180px;">
-                        <h5 class="card-title"> Ebere Estate</h5>
-                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of
-                            the card’s content.</p>
-                        <p><b>Price: $140K</b></p><br>
-                    </div><br> <br>
-
-                    <div class="card-body">
-                        <center>
-                            <hr>
-                            <a href="#!" onclick=" buy_property('$20K', 'Ebere Estate')"
-                                class="card-link btn btn-sm btn-secondary">Buy</a>
-                            <a href="property_details.html" class="card-link btn btn-sm btn-primary">Details</a>
-                        </center>
-                    </div>
-                </div>
-            </div> <!--col starts here--> <div class="col-md-4"> <!--col starts here-->
-                <div class="card shadow">
-                    <img src="img/imgh3.webp" class="card-img-top pro_img" alt="...">
-                    <div class="card-body" style="height: 180px;">
-                        <h5 class="card-title"> Ebere Estate</h5>
-                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of
-                            the card’s content.</p>
-                        <p><b>Price: $20K</b></p><br>
-                    </div>
-
-                    <div class="card-body">
-                        <center>
-                            <hr>
-                            <a href="#!" onclick=" buy_property('$20K', 'Ebere Estate')"
-                                class="card-link btn btn-sm btn-secondary">Buy</a>
-                            <a href="property_details.html" class="card-link btn btn-sm btn-primary">Details</a>
-                        </center>
-                    </div>
-                </div>
-            </div> <!--col starts here--> <div class="col-md-4"> <!--col starts here-->
-                <div class="card shadow">
-                    <img src="img/imgh2.webp" class="card-img-top pro_img" alt="...">
+                    <img src="img/commercial/comm4.jpeg" class="card-img-top pro_img" alt="...">
                     <div class="card-body" style="height: 180px;">
                         <h5 class="card-title"> Ebere Estate</h5>
                         <p class="card-text">Some quick example text to build on the card title and make up the bulk of
@@ -261,12 +185,88 @@
                 </div>
             </div> <!--col starts here--> <div class="col-md-4"> <!--col starts here-->
                 <div class="card shadow">
-                    <img src="img/imgh1.jpeg" class="card-img-top pro_img" alt="...">
+                    <img src="img/commercial/comm5.jpeg" class="card-img-top pro_img" alt="...">
                     <div class="card-body" style="height: 180px;">
                         <h5 class="card-title"> Ebere Estate</h5>
                         <p class="card-text">Some quick example text to build on the card title and make up the bulk of
                             the card’s content.</p>
-                        <p><b>Price: $20K</b></p> <br>
+                        <p><b>Price: $20K</b></p>
+                    </div>
+
+                    <div class="card-body">
+                        <center>
+                            <hr>
+                            <a href="#!" onclick=" buy_property('$20K', 'Ebere Estate')"
+                                class="card-link btn btn-sm btn-secondary">Buy</a>
+                            <a href="property_details.html" class="card-link btn btn-sm btn-primary">Details</a>
+                        </center>
+                    </div>
+                </div>
+            </div> <!--col starts here--> <div class="col-md-4"> <!--col starts here-->
+                <div class="card shadow">
+                    <img src="img/commercial/comm6.webp" class="card-img-top pro_img" alt="...">
+                    <div class="card-body" style="height: 180px;">
+                        <h5 class="card-title"> Ebere Estate</h5>
+                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of
+                            the card’s content.</p>
+                        <p><b>Price: $20K</b></p>
+                    </div>
+
+                    <div class="card-body">
+                        <center>
+                            <hr>
+                            <a href="#!" onclick=" buy_property('$20K', 'Ebere Estate')"
+                                class="card-link btn btn-sm btn-secondary">Buy</a>
+                            <a href="property_details.html" class="card-link btn btn-sm btn-primary">Details</a>
+                        </center>
+                    </div>
+                </div>
+            </div> <!--col starts here--> <div class="col-md-4"> <!--col starts here-->
+                <div class="card shadow">
+                    <img src="img/commercial/comm7.jpeg" class="card-img-top pro_img" alt="...">
+                    <div class="card-body" style="height: 180px;">
+                        <h5 class="card-title"> Ebere Estate</h5>
+                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of
+                            the card’s content.</p>
+                        <p><b>Price: $20K</b></p><br>
+                    </div>
+
+                    <div class="card-body">
+                        <center>
+                            <hr>
+                            <a href="#!" onclick=" buy_property('$20K', 'Ebere Estate')"
+                                class="card-link btn btn-sm btn-secondary">Buy</a>
+                            <a href="property_details.html" class="card-link btn btn-sm btn-primary">Details</a>
+                        </center>
+                    </div>
+                </div>
+            </div> <!--col starts here--> <div class="col-md-4"> <!--col starts here-->
+                <div class="card shadow">
+                    <img src="img/commercial/comm8.jpeg" class="card-img-top pro_img" alt="...">
+                    <div class="card-body" style="height: 180px;">
+                        <h5 class="card-title"> Ebere Estate</h5>
+                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of
+                            the card’s content.</p>
+                        <p><b>Price: $20K</b></p>
+                    </div>
+
+                    <div class="card-body">
+                        <center>
+                            <hr>
+                            <a href="#!" onclick=" buy_property('$20K', 'Ebere Estate')"
+                                class="card-link btn btn-sm btn-secondary">Buy</a>
+                            <a href="property_details.html" class="card-link btn btn-sm btn-primary">Details</a>
+                        </center>
+                    </div>
+                </div>
+            </div> <!--col starts here--> <div class="col-md-4"> <!--col starts here-->
+                <div class="card shadow">
+                    <img src="img/commercial/comm9.webp" class="card-img-top pro_img" alt="...">
+                    <div class="card-body" style="height: 180px;">
+                        <h5 class="card-title"> Ebere Estate</h5>
+                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of
+                            the card’s content.</p>
+                        <p><b>Price: $20K</b></p>
                     </div>
 
                     <div class="card-body">
