--- a/dev.html
+++ b/dev.html
@@ -3,14 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Catigory</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" crossorigin="anonymous">
     <link rel="stylesheet" href="css/ebere.css">
-    <title>Properties</title>
 </head>
 <body>
-    
-    <!-- nav bar starts here -->
+     <!-- nav bar starts here -->
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
         <div class="container-fluid">
             <!-- Logo on the left -->
@@ -28,7 +27,7 @@
             <div class="collapse navbar-collapse" id="navbarNavDropdown">
                 <ul class="navbar-nav ms-auto"> <!-- Added ms-auto here -->
                     <li class="nav-item">
-                        <a class="nav-link text-primary" aria-current="page" href="properties.html">Properties</a>
+                        <a class="nav-link " aria-current="page" href="dev.html">Properties</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="agents.html">Agents</a>
@@ -46,7 +45,7 @@
                     </li>
 
                     <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
+                        <a class="nav-link text-primary dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
                             aria-expanded="false">
                             Category
                         </a>
@@ -78,9 +77,9 @@
 
     <div class="text-white bg-secondary">
         <br><br><br>
-        <h2 align="center">Properties</h2>
+        <h2 align="center">New Developments</h2>
         <center>
-            <a href="index.html" class="text-white">Home</a> <big>/</big> <a href="#!" class="text-white">Properties</a> 
+            <a href="index.html" class="text-white">Home</a> <big>/</big> <a href="properties.html" class="text-white">Properties</a> <big>/</big> <a href="dev.html" class="text-white">New Developments</a>
         </center>
         <br><br><br>
     </div>
@@ -95,8 +94,8 @@
         <div class="row"> <!--rows starts here-->
             <div class="col-md-4"> <!--col starts here-->
                 <div class="card shadow">
-                    <img src="img/new1.jpg" class="card-img-top pro_img" alt="...">
-                    <div class="card-body" style="height: 180px;">
+                    <img src="img/newdev/newdev1.jpeg" class="card-img-top pro_img" alt="...">
+                    <div class="card-body">
                         <h5 class="card-title">GRA Villa</h5>
                         <p class="card-text">Some quick example text to build on the card title and make up the bulk of
                             the card’s content.</p>
@@ -118,8 +117,8 @@
 
             <div class="col-md-4"> <!--col starts here-->
                 <div class="card shadow">
-                    <img src="img/new3.jpeg" class="card-img-top pro_img" alt="...">
-                    <div class="card-body" style="height: 180px;">
+                    <img src="img/newdev/newdev2.jpeg" class="card-img-top pro_img" alt="...">
+                    <div class="card-body">
                         <h5 class="card-title">GRA Bencode</h5>
                         <p class="card-text">Some quick example text to build on the card title and make up the bulk of
                             the card’s content.</p>
@@ -143,8 +142,8 @@
 
             <div class="col-md-4"> <!--col starts here-->
                 <div class="card shadow">
-                    <img src="img/new2.jpeg" class="card-img-top pro_img" alt="...">
-                    <div class="card-body" style="height: 180px;">
+                    <img src="img/newdev/newdev3.jpeg" class="card-img-top pro_img" alt="...">
+                    <div class="card-body">
                         <h5 class="card-title"> Ebere Estate</h5>
                         <p class="card-text">Some quick example text to build on the card title and make up the bulk of
                             the card’s content.</p>
@@ -166,83 +165,7 @@
 
              <div class="col-md-4"> <!--col starts here-->
                 <div class="card shadow">
-                    <img src="img/new9.jpeg" class="card-img-top pro_img" alt="...">
-                    <div class="card-body" style="height: 180px;">
-                        <h5 class="card-title"> Ebere Estate</h5>
-                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of
-                            the card’s content.</p>
-                        <p><b>Price: $160K</b></p>
-                    </div>
-
-                    <div class="card-body">
-                        <center>
-                            <hr>
-                            <a href="#!" onclick=" buy_property('$20K', 'Ebere Estate')"
-                                class="card-link btn btn-sm btn-secondary">Buy</a>
-                            <a href="property_details.html" class="card-link btn btn-sm btn-primary">Details</a>
-                        </center>
-                    </div>
-                </div>
-            </div> <!--col starts here--> <div class="col-md-4"> <!--col starts here-->
-                <div class="card shadow">
-                    <img src="img/new4.jpg" class="card-img-top pro_img" alt="...">
-                    <div class="card-body" style="height: 180px;">
-                        <h5 class="card-title"> Ebere Estate</h5>
-                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of
-                            the card’s content.</p>
-                        <p><b>Price: $120K</b></p>
-                    </div>
-
-                    <div class="card-body">
-                        <center>
-                            <hr>
-                            <a href="#!" onclick=" buy_property('$20K', 'Ebere Estate')"
-                                class="card-link btn btn-sm btn-secondary">Buy</a>
-                            <a href="property_details.html" class="card-link btn btn-sm btn-primary">Details</a>
-                        </center>
-                    </div>
-                </div>
-            </div> <!--col starts here--> <div class="col-md-4"> <!--col starts here-->
-                <div class="card shadow">
-                    <img src="img/new8.jpg" class="card-img-top pro_img" alt="...">
-                    <div class="card-body" style="height: 180px;">
-                        <h5 class="card-title"> Ebere Estate</h5>
-                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of
-                            the card’s content.</p>
-                        <p><b>Price: $140K</b></p><br>
-                    </div><br> <br>
-
-                    <div class="card-body">
-                        <center>
-                            <hr>
-                            <a href="#!" onclick=" buy_property('$20K', 'Ebere Estate')"
-                                class="card-link btn btn-sm btn-secondary">Buy</a>
-                            <a href="property_details.html" class="card-link btn btn-sm btn-primary">Details</a>
-                        </center>
-                    </div>
-                </div>
-            </div> <!--col starts here--> <div class="col-md-4"> <!--col starts here-->
-                <div class="card shadow">
-                    <img src="img/imgh3.webp" class="card-img-top pro_img" alt="...">
-                    <div class="card-body" style="height: 180px;">
-                        <h5 class="card-title"> Ebere Estate</h5>
-                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of
-                            the card’s content.</p>
-                        <p><b>Price: $20K</b></p><br>
-                    </div>
-
-                    <div class="card-body">
-                        <center>
-                            <hr>
-                            <a href="#!" onclick=" buy_property('$20K', 'Ebere Estate')"
-                                class="card-link btn btn-sm btn-secondary">Buy</a>
-                            <a href="property_details.html" class="card-link btn btn-sm btn-primary">Details</a>
-                        </center>
-                    </div>
-                </div>
-            </div> <!--col starts here--> <div class="col-md-4"> <!--col starts here-->
-                <div class="card shadow">
-                    <img src="img/imgh2.webp" class="card-img-top pro_img" alt="...">
+                    <img src="img/newdev/newdev4.jpeg" class="card-img-top pro_img" alt="...">
                     <div class="card-body" style="height: 180px;">
                         <h5 class="card-title"> Ebere Estate</h5>
                         <p class="card-text">Some quick example text to build on the card title and make up the bulk of
@@ -261,12 +184,88 @@
                 </div>
             </div> <!--col starts here--> <div class="col-md-4"> <!--col starts here-->
                 <div class="card shadow">
-                    <img src="img/imgh1.jpeg" class="card-img-top pro_img" alt="...">
+                    <img src="img/newdev/newdev5.jpeg" class="card-img-top pro_img" alt="...">
                     <div class="card-body" style="height: 180px;">
                         <h5 class="card-title"> Ebere Estate</h5>
                         <p class="card-text">Some quick example text to build on the card title and make up the bulk of
                             the card’s content.</p>
-                        <p><b>Price: $20K</b></p> <br>
+                        <p><b>Price: $20K</b></p>
+                    </div>
+
+                    <div class="card-body">
+                        <center>
+                            <hr>
+                            <a href="#!" onclick=" buy_property('$20K', 'Ebere Estate')"
+                                class="card-link btn btn-sm btn-secondary">Buy</a>
+                            <a href="property_details.html" class="card-link btn btn-sm btn-primary">Details</a>
+                        </center>
+                    </div>
+                </div>
+            </div> <!--col starts here--> <div class="col-md-4"> <!--col starts here-->
+                <div class="card shadow">
+                    <img src="img/newdev/newdev6.jpeg" class="card-img-top pro_img" alt="...">
+                    <div class="card-body" style="height: 180px;">
+                        <h5 class="card-title"> Ebere Estate</h5>
+                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of
+                            the card’s content.</p>
+                        <p><b>Price: $20K</b></p>
+                    </div>
+
+                    <div class="card-body">
+                        <center>
+                            <hr>
+                            <a href="#!" onclick=" buy_property('$20K', 'Ebere Estate')"
+                                class="card-link btn btn-sm btn-secondary">Buy</a>
+                            <a href="property_details.html" class="card-link btn btn-sm btn-primary">Details</a>
+                        </center>
+                    </div>
+                </div>
+            </div> <!--col starts here--> <div class="col-md-4"> <!--col starts here-->
+                <div class="card shadow">
+                    <img src="img/newdev/newdev8.jpeg" class="card-img-top pro_img" alt="...">
+                    <div class="card-body" style="height: 180px;">
+                        <h5 class="card-title"> Ebere Estate</h5>
+                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of
+                            the card’s content.</p>
+                        <p><b>Price: $20K</b></p><br>
+                    </div>
+
+                    <div class="card-body">
+                        <center>
+                            <hr>
+                            <a href="#!" onclick=" buy_property('$20K', 'Ebere Estate')"
+                                class="card-link btn btn-sm btn-secondary">Buy</a>
+                            <a href="property_details.html" class="card-link btn btn-sm btn-primary">Details</a>
+                        </center>
+                    </div>
+                </div>
+            </div> <!--col starts here--> <div class="col-md-4"> <!--col starts here-->
+                <div class="card shadow">
+                    <img src="img/newdev/newdev9.jpeg" class="card-img-top pro_img" alt="...">
+                    <div class="card-body" style="height: 180px;">
+                        <h5 class="card-title"> Ebere Estate</h5>
+                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of
+                            the card’s content.</p>
+                        <p><b>Price: $20K</b></p>
+                    </div>
+
+                    <div class="card-body">
+                        <center>
+                            <hr>
+                            <a href="#!" onclick=" buy_property('$20K', 'Ebere Estate')"
+                                class="card-link btn btn-sm btn-secondary">Buy</a>
+                            <a href="property_details.html" class="card-link btn btn-sm btn-primary">Details</a>
+                        </center>
+                    </div>
+                </div>
+            </div> <!--col starts here--> <div class="col-md-4"> <!--col starts here-->
+                <div class="card shadow">
+                    <img src="img/newdev/newdev9.jpeg" class="card-img-top pro_img" alt="...">
+                    <div class="card-body" style="height: 180px;">
+                        <h5 class="card-title"> Ebere Estate</h5>
+                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of
+                            the card’s content.</p>
+                        <p><b>Price: $20K</b></p>
                     </div>
 
                     <div class="card-body">
@@ -323,8 +322,6 @@
 
         }
     </script>
-
-
 
 
 
