--- a/vil.html
+++ b/vil.html
@@ -27,7 +27,7 @@
             <div class="collapse navbar-collapse" id="navbarNavDropdown">
                 <ul class="navbar-nav ms-auto"> <!-- Added ms-auto here -->
                     <li class="nav-item">
-                        <a class="nav-link text-primary" aria-current="page" href="properties.html">Properties</a>
+                        <a class="nav-link " aria-current="page" href="properties.html">Properties</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="agents.html">Agents</a>
@@ -45,7 +45,7 @@
                     </li>
 
                     <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
+                        <a class="nav-link text-primary dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
                             aria-expanded="false">
                             Category
                         </a>
@@ -77,9 +77,9 @@
 
     <div class="text-white bg-secondary">
         <br><br><br>
-        <h2 align="center">Catigory</h2>
+        <h2 align="center">Villas</h2>
         <center>
-            <a href="index.html" class="text-white">Home</a> <big>/</big> <a href="catigory.html" class="text-white">catigory</a> <big>/</big> <a href="#!" class="text-white">Houses</a>
+            <a href="index.html" class="text-white">Home</a> <big>/</big> <a href="properties.html" class="text-white">Properties</a> <big>/</big> <a href="vil.html" class="text-white">Villas</a>
         </center>
         <br><br><br>
     </div>
@@ -94,7 +94,7 @@
         <div class="row"> <!--rows starts here-->
             <div class="col-md-4"> <!--col starts here-->
                 <div class="card shadow">
-                    <img src="img/new1.jpg" class="card-img-top pro_img" alt="...">
+                    <img src="img/villas/vil1.jpeg" class="card-img-top pro_img" alt="...">
                     <div class="card-body">
                         <h5 class="card-title">GRA Villa</h5>
                         <p class="card-text">Some quick example text to build on the card title and make up the bulk of
@@ -117,7 +117,7 @@
 
             <div class="col-md-4"> <!--col starts here-->
                 <div class="card shadow">
-                    <img src="img/new3.jpeg" class="card-img-top pro_img" alt="...">
+                    <img src="img/villas/vil2.jpeg" class="card-img-top pro_img" alt="...">
                     <div class="card-body">
                         <h5 class="card-title">GRA Bencode</h5>
                         <p class="card-text">Some quick example text to build on the card title and make up the bulk of
@@ -142,7 +142,7 @@
 
             <div class="col-md-4"> <!--col starts here-->
                 <div class="card shadow">
-                    <img src="img/new2.jpeg" class="card-img-top pro_img" alt="...">
+                    <img src="img/villas/vil3.jpeg" class="card-img-top pro_img" alt="...">
                     <div class="card-body">
                         <h5 class="card-title"> Ebere Estate</h5>
                         <p class="card-text">Some quick example text to build on the card title and make up the bulk of
@@ -165,8 +165,8 @@
 
              <div class="col-md-4"> <!--col starts here-->
                 <div class="card shadow">
-                    <img src="img/new9.jpeg" class="card-img-top pro_img" alt="...">
-                    <div class="card-body">
+                    <img src="img/villas/vil4.jpeg" class="card-img-top pro_img" alt="...">
+                    <div class="card-body" style="height: 280px;">
                         <h5 class="card-title"> Ebere Estate</h5>
                         <p class="card-text">Some quick example text to build on the card title and make up the bulk of
                             the card’s content.</p>
@@ -184,8 +184,8 @@
                 </div>
             </div> <!--col starts here--> <div class="col-md-4"> <!--col starts here-->
                 <div class="card shadow">
-                    <img src="img/new4.jpg" class="card-img-top pro_img" alt="...">
-                    <div class="card-body">
+                    <img src="img/villas/vil4.jpeg" class="card-img-top pro_img" alt="...">
+                    <div class="card-body" style="height: 280px;">
                         <h5 class="card-title"> Ebere Estate</h5>
                         <p class="card-text">Some quick example text to build on the card title and make up the bulk of
                             the card’s content.</p>
@@ -203,8 +203,8 @@
                 </div>
             </div> <!--col starts here--> <div class="col-md-4"> <!--col starts here-->
                 <div class="card shadow">
-                    <img src="img/new8.jpg" class="card-img-top pro_img" alt="...">
-                    <div class="card-body">
+                    <img src="img/villas/vil5.jpeg" class="card-img-top pro_img" alt="...">
+                    <div class="card-body" style="height: 280px;">
                         <h5 class="card-title"> Ebere Estate</h5>
                         <p class="card-text">Some quick example text to build on the card title and make up the bulk of
                             the card’s content.</p>
@@ -222,8 +222,8 @@
                 </div>
             </div> <!--col starts here--> <div class="col-md-4"> <!--col starts here-->
                 <div class="card shadow">
-                    <img src="img/imgh3.webp" class="card-img-top pro_img" alt="...">
-                    <div class="card-body">
+                    <img src="img/villas/vil6.jpeg" class="card-img-top pro_img" alt="...">
+                    <div class="card-body" style="height: 280px;">
                         <h5 class="card-title"> Ebere Estate</h5>
                         <p class="card-text">Some quick example text to build on the card title and make up the bulk of
                             the card’s content.</p>
@@ -241,8 +241,8 @@
                 </div>
             </div> <!--col starts here--> <div class="col-md-4"> <!--col starts here-->
                 <div class="card shadow">
-                    <img src="img/imgh2.webp" class="card-img-top pro_img" alt="...">
-                    <div class="card-body">
+                    <img src="img/villas/VIL7.jpeg" class="card-img-top pro_img" alt="...">
+                    <div class="card-body" style="height: 280px;">
                         <h5 class="card-title"> Ebere Estate</h5>
                         <p class="card-text">Some quick example text to build on the card title and make up the bulk of
                             the card’s content.</p>
@@ -260,8 +260,8 @@
                 </div>
             </div> <!--col starts here--> <div class="col-md-4"> <!--col starts here-->
                 <div class="card shadow">
-                    <img src="img/imgh1.jpeg" class="card-img-top pro_img" alt="...">
-                    <div class="card-body" style="height: 300px;">
+                    <img src="img/villas/vil8.jpeg" class="card-img-top pro_img" alt="...">
+                    <div class="card-body" style="height: 280px;">
                         <h5 class="card-title"> Ebere Estate</h5>
                         <p class="card-text">Some quick example text to build on the card title and make up the bulk of
                             the card’s content.</p>
