I also added my contact and made some updates

--- a/apartments.html
+++ b/apartments.html
@@ -168,7 +168,7 @@
                 <div class="card shadow">
                     <img src="img/new9.jpeg" class="card-img-top pro_img" alt="...">
                     <div class="card-body" style="height: 280px;">
-                        <h5 class="card-title"> Ebere Estate</h5>
+                        <h5 class="card-title">Hucting</h5>
                         <p class="card-text">Some quick example text to build on the card title and make up the bulk of
                             the card’s content.</p>
                         <p><b>Price: $20K</b></p>
@@ -182,12 +182,12 @@
                             <a href="property_details.html" class="card-link btn btn-sm btn-primary">Details</a>
                         </center>
                     </div>
-                </div>
+                </div><br><br>
             </div> <!--col starts here--> <div class="col-md-4"> <!--col starts here-->
                 <div class="card shadow">
                     <img src="img/new4.jpg" class="card-img-top pro_img" alt="...">
                     <div class="card-body" style="height: 280px;">
-                        <h5 class="card-title"> Ebere Estate</h5>
+                        <h5 class="card-title">Kattentrum</h5>
                         <p class="card-text">Some quick example text to build on the card title and make up the bulk of
                             the card’s content.</p>
                         <p><b>Price: $20K</b></p>
@@ -206,7 +206,7 @@
                 <div class="card shadow">
                     <img src="img/new8.jpg" class="card-img-top pro_img" alt="...">
                     <div class="card-body" style="height: 280px;">
-                        <h5 class="card-title"> Ebere Estate</h5>
+                        <h5 class="card-title">Wale</h5>
                         <p class="card-text">Some quick example text to build on the card title and make up the bulk of
                             the card’s content.</p>
                         <p><b>Price: $20K</b></p>
@@ -225,7 +225,7 @@
                 <div class="card shadow">
                     <img src="img/new9.jpeg" class="card-img-top pro_img" alt="...">
                     <div class="card-body" style="height: 280px;">
-                        <h5 class="card-title"> Ebere Estate</h5>
+                        <h5 class="card-title">Mandorf</h5>
                         <p class="card-text">Some quick example text to build on the card title and make up the bulk of
                             the card’s content.</p>
                         <p><b>Price: $20K</b></p><br>
@@ -244,7 +244,7 @@
                 <div class="card shadow">
                     <img src="img/new4.jpg" class="card-img-top pro_img" alt="...">
                     <div class="card-body" style="height: 280px;">
-                        <h5 class="card-title"> Ebere Estate</h5>
+                        <h5 class="card-title">Groplingen</h5>
                         <p class="card-text">Some quick example text to build on the card title and make up the bulk of
                             the card’s content.</p>
                         <p><b>Price: $20K</b></p>
@@ -263,7 +263,7 @@
                 <div class="card shadow">
                     <img src="img/imgh1.jpeg" class="card-img-top pro_img" alt="...">
                     <div class="card-body" style="height: 280px;">
-                        <h5 class="card-title"> Ebere Estate</h5>
+                        <h5 class="card-title">Burg</h5>
                         <p class="card-text">Some quick example text to build on the card title and make up the bulk of
                             the card’s content.</p>
                         <p><b>Price: $20K</b></p>
