--- a/contact.html
+++ b/contact.html
@@ -11,76 +11,86 @@
 </head>
 <body>
 
-  <!-- HEADER -->
-  <header class="bg-white shadow-sm">
-    <div class="container d-flex align-items-center py-3">
-      <a href="#" class="me-auto">
-        <img src="img/logo/logo.avif" alt="Logo" height="50">
-      </a>
-      <div class="d-none d-md-flex align-items-center">
-        <i class='bx bxs-phone-call me-1'></i> +1 123 456 789
-      </div>
-      <div class="d-none d-md-flex align-items-center ms-4">
-        <i class='bx bxs-envelope me-1'></i> email@example.com
-      </div>
-      <div class="ms-4">
-        <a href="#" class="text-dark me-2"><i class='bx bxl-facebook'></i></a>
-        <a href="#" class="text-dark me-2"><i class='bx bxl-twitter'></i></a>
-        <a href="#" class="text-dark"><i class='bx bxl-youtube'></i></a>
-      </div>
-    </div>
-  </header>
-
-  <!-- NAVBAR -->
-  <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <div class="container">
-      <a class="navbar-brand d-lg-none" href="#">
-        <img src="assets/images/logo.png" alt="Logo" height="40">
-      </a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-              data-bs-target="#mainNav" aria-controls="mainNav" aria-expanded="false"
-              aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div id="mainNav" class="collapse navbar-collapse">
-        <ul class="navbar-nav mx-auto">
-          <li class="nav-item"><a class="nav-link active" href="#">Home</a></li>
-          <li class="nav-item"><a class="nav-link" href="#!"></a></li>
-          <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="contact.html" data-bs-toggle="dropdown">
-              About
+  
+ <!-- nav bar starts here -->
+    <nav class="navbar navbar-expand-lg bg-body-tertiary">
+        <div class="container-fluid">
+            <!-- Logo on the left -->
+            <a class="navbar-brand" href="index.html">
+                <img src="img/logo/logo.avif" alt="Logo" width="100px">
             </a>
-            <ul class="dropdown-menu">
-              <li><a class="dropdown-item" href="#!"></a></li>
-              <li><a class="dropdown-item" href="#">Details</a></li>
-            </ul>
-          </li>
-          <li class="nav-item"><a class="nav-link" href="#!"></a></li>
-          <li class="nav-item"><a class="nav-link" href="#!"></a></li>
-          <li class="nav-item"><a class="nav-link" href="#"></a></li>
-          <li class="nav-item"><a class="nav-link active" href="#">Contact</a></li>
-        </ul>
-        <form class="d-flex me-3" role="search">
-          <input class="form-control me-2" type="search" placeholder="Search…">
-          <button class="btn btn-outline-secondary" type="submit"><i class='bx bx-search'></i></button>
-        </form>
-        <a href="#" class="btn btn-primary">Get Started</a>
-      </div>
-    </div>
-  </nav>
 
-  <!-- PAGE TITLE -->
-  <section class="bg-primary text-white text-center py-5">
-    <div class="container">
-      <h1>Contact Us</h1>
-      <nav aria-label="breadcrumb">
-        <ol class="breadcrumb justify-content-center mb-0">
-          <li class="breadcrumb-item"><a class="text-white" href="index.html">Home</a> <big>/</big> <a href="contact.html" class="text-white"></a></li>
-          <li class="breadcrumb-item active text-white" aria-current="page">Contact</li>
-        </ol>
-      </nav>
+            <!-- Toggler for mobile view -->
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown"
+                aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+
+            <!-- Menu aligned to the right -->
+            <div class="collapse navbar-collapse" id="navbarNavDropdown">
+                <ul class="navbar-nav ms-auto"> <!-- Added ms-auto here -->
+                    <li class="nav-item">
+                        <a class="nav-link " aria-current="page" href="properties.html">Properties</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="agents.html">Agents</a>
+                    </li>
+
+                    <li class="nav-item dropdown">
+                        <a class="nav-link text-primary dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
+                            aria-expanded="false">
+                            About
+                        </a>
+                        <ul class="dropdown-menu">
+                            <li><a class="dropdown-item" href="about.html">About us</a></li>
+                            <li><a class="dropdown-item" href="contact.html">Contact us</a></li>
+                        </ul>
+                    </li>
+
+                    <li class="nav-item dropdown">
+                        <a class="nav-link  dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
+                            aria-expanded="false">
+                            Category
+                        </a>
+                        <ul class="dropdown-menu">
+                            <li><a class="dropdown-item" href="house.html">Houses</a></li>
+                            <li><a class="dropdown-item" href="dev.html">New Developments</a></li>
+                            <li><a class="dropdown-item" href="vil.html">Villas</a></li>
+                            <li><a class="dropdown-item" href="apartments.html">Apartments</a></li>
+                            <li><a class="dropdown-item" href="commercial.html">Commercial</a></li>
+                        </ul>
+                    </li>
+
+                    <li class="nav-item">
+                        <a class="nav-link active btn btn-secondary text-white ebg_btn" aria-current="page"
+                            href="login.html">Login</a>
+                    </li>
+
+                    <li class="nav-item">
+                        <a class="nav-link active btn btn-primary text-white ebg_btn" aria-current="page"
+                            href="register.html">Register</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </nav>
+
+    <!-- nav bar ends here -->
+
+
+    <div class="text-white bg-secondary">
+        <br><br><br>
+        <h2 align="center">Contact</h2>
+        <center>
+            <a href="index.html" class="text-white">Home</a> <big>/</big> <a href="contact.html" class="text-white">Contacts</a> 
+        </center>
+        <br><br><br>
     </div>
-  </section>
+
+
+
+    <br><br><br>
+  
 
   <!-- CONTACT INFO -->
   <section class="py-5">
@@ -132,78 +142,46 @@
           </form>
         </div>
         <div class="col-lg-6">
-          <img src="assets/images/contact-img2.jpg" class="img-fluid rounded" alt="Contact">
+          <img src="img/real1.jpg" class="img-fluid rounded" alt="Contact">
         </div>
       </div>
     </div>
   </section>
 
   <!-- FOOTER -->
-  <footer class="pt-5 bg-dark text-light">
-    <div class="container">
-      <div class="row gy-4">
-        <div class="col-md-4">
-          <img src="assets/images/logo2.png" alt="Logo" height="50">
-          <p class="mt-3">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-          <form class="d-flex mb-3">
-            <input type="email" class="form-control me-2" placeholder="Your Email" required>
-            <button type="submit" class="btn btn-primary">Subscribe</button>
-          </form>
-          <div>
-            <a href="#" class="text-light me-2"><i class='bx bxl-facebook'></i></a>
-            <a href="#" class="text-light me-2"><i class='bx bxl-twitter'></i></a>
-            <a href="#" class="text-light me-2"><i class='bx bxl-instagram'></i></a>
-            <a href="#" class="text-light"><i class='bx bxl-pinterest'></i></a>
-          </div>
-        </div>
-        <div class="col-md-3">
-          <h5>Our Service</h5>
-          <ul class="list-unstyled">
-            <li><a href="#" class="text-light">Visual Design</a></li>
-            <li><a href="#" class="text-light">Development</a></li>
-            <li><a href="#" class="text-light">QA & Testing</a></li>
-            <li><a href="#" class="text-light">IT Management</a></li>
-            <li><a href="#" class="text-light">Cyber Security</a></li>
-            <li><a href="#" class="text-light">Wireless Connection</a></li>
-          </ul>
-        </div>
-        <div class="col-md-2">
-          <h5>Quick Links</h5>
-          <ul class="list-unstyled">
-            <li><a href="#" class="text-light">FAQ</a></li>
-            <li><a href="#" class="text-light">Service</a></li>
-            <li><a href="#" class="text-light">Career</a></li>
-            <li><a href="#" class="text-light">Privacy Policy</a></li>
-            <li><a href="#" class="text-light">Terms & Conditions</a></li>
-            <li><a href="#" class="text-light">Data Analysis</a></li>
-          </ul>
-        </div>
-        <div class="col-md-3">
-          <h5>Contact</h5>
-          <ul class="list-unstyled">
-            <li><i class='bx bx-mobile-alt'></i> +1 123 456 789</li>
-            <li><i class='bx bx-phone'></i> +1 975 456 789</li>
-            <li><i class='bx bxs-envelope'></i> email@example.com</li>
-            <li><i class='bx bxs-map'></i> 28/A Street, New York, USA</li>
-          </ul>
-        </div>
-      </div>
-      <hr class="mt-4">
-      <div class="d-flex justify-content-between py-3">
-        <ul class="list-inline mb-0">
-          <li class="list-inline-item"><a href="#" class="text-light">Home</a></li>
-          <li class="list-inline-item"><a href="#" class="text-light">About</a></li>
-          <li class="list-inline-item"><a href="#" class="text-light">Solutions</a></li>
-          <li class="list-inline-item"><a href="#" class="text-light">Case Studies</a></li>
-          <li class="list-inline-item"><a href="#" class="text-light">Blog</a></li>
-          <li class="list-inline-item"><a href="#" class="text-light">Contact</a></li>
+  <footer class="py-3 my-4" style="background-color: #000000;">
+        <ul class="nav justify-content-center border-bottom pb-3 mb-3">
+            <li class="nav-item"><a href="index.html" class="nav-link px-2 ">Home</a></li>
+            <li class="nav-item"><a href="agents.html" class="nav-link px-2 ">Agent</a></li>
+            <li class="nav-item"><a href="properties.html" class="nav-link px-2 ">Properties</a></li>
+            <li class="nav-item"><a href="login.html" class="nav-link px-2 ">Login</a></li>
+            <li class="nav-item"><a href="register.html" class="nav-link px-2 ">Register</a></li>
         </ul>
-        <p class="mb-0">&copy; 2025 Paso. Designed by HiBootstrap.com.</p>
-      </div>
-    </div>
-  </footer>
+        <p class="text-center ">&copy; 2025 Company, Inc</p>
+    </footer>
 
-  <!-- Bootstrap JS & Dependencies -->
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.4.3/dist/js/bootstrap.bundle.min.js"></script>
+
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-j1CDi7MgGQ12Z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO"
+        crossorigin="anonymous"></script>
+
+
+    <script>
+
+        // buy_property('$20K', 'Ebere Estate')
+
+
+        function buy_property(price, name) {
+
+            alert(`Thank you for purchasing this ${name} property, at ${price}`)
+
+        }
+    </script>
+
+
+
+
+
 </body>
 </html>
