I just updated my details

--- a/properties.html
+++ b/properties.html
@@ -98,9 +98,10 @@
                     <img src="img/new1.jpg" class="card-img-top pro_img" alt="...">
                     <div class="card-body" style="height: 180px;">
                         <h5 class="card-title">GRA Villa</h5>
-                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of
-                            the card’s content.</p>
-                        <p><b>Price: $30K</b></p>
+                        <p class="card-text">Charming 4-Bedroom Villa in Lilienthal
+                            🌍 Location: Bremen, Germany
+                            .</p>
+                        <p><b>Price:  €130,000</b><br> 🏡 3 beds | 2 baths | 1,500 m² land</b></p>
                     </div>
 
                     <div class="card-body">
@@ -121,9 +122,10 @@
                     <img src="img/new3.jpeg" class="card-img-top pro_img" alt="...">
                     <div class="card-body" style="height: 180px;">
                         <h5 class="card-title">GRA Bencode</h5>
-                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of
-                            the card’s content.</p>
-                        <p><b>Price: $120K</b></p>
+                        <p class="card-text">Charming 4-Bedroom Villa in Lilienthal
+                            🌍 Location: Bremen, Germany
+                            .</p>
+                        <p><b>Price:  €120,000</b><br> 🏡 3 beds | 2 baths | 1,500 m² land</b></p>
                     </div>
 
                     <div class="card-body">
@@ -145,10 +147,11 @@
                 <div class="card shadow">
                     <img src="img/new2.jpeg" class="card-img-top pro_img" alt="...">
                     <div class="card-body" style="height: 180px;">
-                        <h5 class="card-title"> Ebere Estate</h5>
-                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of
-                            the card’s content.</p>
-                        <p><b>Price: $20K</b></p>
+                        <h5 class="card-title"></h5>
+                        <p class="card-text">Charming 4-Bedroom Villa in Lilienthal
+                            🌍 Location: Bremen, Germany
+                            .</p>
+                        <p><b>Price:  €220,000</b><br> 🏡 3 beds | 2 baths | 1,500 m² land</b></p>
                     </div>
 
                     <div class="card-body">
@@ -168,10 +171,11 @@
                 <div class="card shadow">
                     <img src="img/new9.jpeg" class="card-img-top pro_img" alt="...">
                     <div class="card-body" style="height: 180px;">
-                        <h5 class="card-title"> Ebere Estate</h5>
-                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of
-                            the card’s content.</p>
-                        <p><b>Price: $160K</b></p>
+                        <h5 class="card-title">Witzleben strs</h5>
+                        <p class="card-text">Charming 4-Bedroom Villa in Neue Vahr
+                            🌍 Location: Bremen, Germany
+                            </p>
+                        <p><b>Price:  €160,000</b><br> 🏡 3 beds | 2 baths | 1,500 m² land</b></p>
                     </div>
 
                     <div class="card-body">
@@ -187,10 +191,11 @@
                 <div class="card shadow">
                     <img src="img/new4.jpg" class="card-img-top pro_img" alt="...">
                     <div class="card-body" style="height: 180px;">
-                        <h5 class="card-title"> Ebere Estate</h5>
-                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of
-                            the card’s content.</p>
-                        <p><b>Price: $120K</b></p>
+                        <h5 class="card-title">Mandorfer Strs</h5>
+                        <p class="card-text">Charming 4-Bedroom Villa in Mandorf
+                            🌍 Location: Bremen, Germany
+                            .</p>
+                        <p><b>Price:   €120,000</b><br> 🏡 3 beds | 2 baths | 1,500 m² land</b></p>
                     </div>
 
                     <div class="card-body">
@@ -206,11 +211,12 @@
                 <div class="card shadow">
                     <img src="img/new8.jpg" class="card-img-top pro_img" alt="...">
                     <div class="card-body" style="height: 180px;">
-                        <h5 class="card-title"> Ebere Estate</h5>
-                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of
-                            the card’s content.</p>
-                        <p><b>Price: $140K</b></p><br>
-                    </div><br> <br>
+                        <h5 class="card-title">Horn</h5>
+                        <p class="card-text">Charming 4-Bedroom Villa in Horn Lehe
+                            🌍 Location: Bremen, Germany
+                            .</p>
+                        <p><b>Price:  €140,000</b><br> 🏡 3 beds | 2 baths | 1,500 m² land</b></p><br>
+                    </div>
 
                     <div class="card-body">
                         <center>
@@ -220,15 +226,16 @@
                             <a href="property_details.html" class="card-link btn btn-sm btn-primary">Details</a>
                         </center>
                     </div>
-                </div>
+                </div><br><br>
             </div> <!--col starts here--> <div class="col-md-4"> <!--col starts here-->
                 <div class="card shadow">
                     <img src="img/imgh3.webp" class="card-img-top pro_img" alt="...">
                     <div class="card-body" style="height: 180px;">
-                        <h5 class="card-title"> Ebere Estate</h5>
-                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of
-                            the card’s content.</p>
-                        <p><b>Price: $20K</b></p><br>
+                        <h5 class="card-title">Neuenlander Strs</h5>
+                        <p class="card-text">Charming 4-Bedroom Villa in Neustadt
+                            🌍 Location: Bremen, Germany
+                            </p>
+                        <p><b>Price:  €205,000</b><br> 🏡 3 beds | 2 baths | 1,500 m² land</b></p><br>
                     </div>
 
                     <div class="card-body">
@@ -244,10 +251,11 @@
                 <div class="card shadow">
                     <img src="img/imgh2.webp" class="card-img-top pro_img" alt="...">
                     <div class="card-body" style="height: 180px;">
-                        <h5 class="card-title"> Ebere Estate</h5>
-                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of
-                            the card’s content.</p>
-                        <p><b>Price: $20K</b></p>
+                        <h5 class="card-title"> Lilienthal Estate</h5>
+                        <p class="card-text">Charming 4-Bedroom Villa in Lilienthal
+                            🌍 Location: Bremen, Germany
+                            </p>
+                        <p><b>Price:  €275,000</b><br> 🏡 4 beds | 2 baths | 1,600 m² land</b></p>
                     </div>
 
                     <div class="card-body">
@@ -263,16 +271,17 @@
                 <div class="card shadow">
                     <img src="img/imgh1.jpeg" class="card-img-top pro_img" alt="...">
                     <div class="card-body" style="height: 180px;">
-                        <h5 class="card-title"> Ebere Estate</h5>
-                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of
-                            the card’s content.</p>
-                        <p><b>Price: $20K</b></p> <br>
+                        <h5 class="card-title">Hucting</h5>
+                        <p class="card-text">Charming 4-Bedroom Villa in Hucting
+                            🌍 Location: Bremen, Germany
+                            .</p>
+                        <p><b>Price:  €150,000</b><br> 🏡 3 beds | 2 baths | 1,500 m² land</b></p> <br>
                     </div>
 
                     <div class="card-body">
                         <center>
                             <hr>
-                            <a href="#!" onclick=" buy_property('$20K', 'Ebere Estate')"
+                            <a href="#!" onclick=" buy_property(' €150,000', 'Hucting')"
                                 class="card-link btn btn-sm btn-secondary">Buy</a>
                             <a href="property_details.html" class="card-link btn btn-sm btn-primary">Details</a>
                         </center>
