--- a/ourproject.html
+++ b/ourproject.html
@@ -1,1 +1,11 @@
-This is our lesson on github pull.
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Project pull</title>
+</head>
+<body>
+    
+</body>
+</html>
