--- a/register.html
+++ b/register.html
@@ -14,7 +14,7 @@
         <div class="container-fluid">
             <!-- Logo on the left -->
             <a class="navbar-brand" href="home.html">
-                <img src="img/logob.png" alt="Logo" width="100px">
+                <img src="img/logo/logo.avif" alt="Logo" width="100px">
             </a>
 
             <!-- Toggler for mobile view -->
@@ -79,7 +79,7 @@
         <br><br><br>
         <h2 align="center">Register</h2>
         <center>
-            <a href="home.html" class="text-white">Home</a> <big>/</big> <a href="#!" class="text-white">Register</a>
+            <a href="index.html" class="text-white">Home</a> <big>/</big> <a href="#!" class="text-white">Register</a>
         </center>
         <br><br><br>
     </div>
