I adjusted a few images

--- a/commercial.html
+++ b/commercial.html
@@ -145,7 +145,7 @@
                 <div class="card shadow">
                     <img src="img/commercial/comm3.jpeg" class="card-img-top pro_img" alt="...">
                     <div class="card-body" style="height: 180px;">
-                        <h5 class="card-title"> Ebere Estate</h5>
+                        <h5 class="card-title">Univasitat</h5>
                         <p class="card-text">Some quick example text to build on the card title and make up the bulk of
                             the card’s content.</p>
                         <p><b>Price: $20K</b></p>
@@ -168,7 +168,7 @@
                 <div class="card shadow">
                     <img src="img/commercial/comm4.jpeg" class="card-img-top pro_img" alt="...">
                     <div class="card-body" style="height: 180px;">
-                        <h5 class="card-title"> Ebere Estate</h5>
+                        <h5 class="card-title">Hochshule</h5>
                         <p class="card-text">Some quick example text to build on the card title and make up the bulk of
                             the card’s content.</p>
                         <p><b>Price: $20K</b></p>
@@ -187,7 +187,7 @@
                 <div class="card shadow">
                     <img src="img/commercial/comm5.jpeg" class="card-img-top pro_img" alt="...">
                     <div class="card-body" style="height: 180px;">
-                        <h5 class="card-title"> Ebere Estate</h5>
+                        <h5 class="card-title">Kattenturm</h5>
                         <p class="card-text">Some quick example text to build on the card title and make up the bulk of
                             the card’s content.</p>
                         <p><b>Price: $20K</b></p>
@@ -206,7 +206,7 @@
                 <div class="card shadow">
                     <img src="img/commercial/comm6.webp" class="card-img-top pro_img" alt="...">
                     <div class="card-body" style="height: 180px;">
-                        <h5 class="card-title"> Ebere Estate</h5>
+                        <h5 class="card-title">Ubersee</h5>
                         <p class="card-text">Some quick example text to build on the card title and make up the bulk of
                             the card’s content.</p>
                         <p><b>Price: $20K</b></p>
@@ -220,12 +220,12 @@
                             <a href="property_details.html" class="card-link btn btn-sm btn-primary">Details</a>
                         </center>
                     </div>
-                </div>
+                </div><br><br>
             </div> <!--col starts here--> <div class="col-md-4"> <!--col starts here-->
                 <div class="card shadow">
                     <img src="img/commercial/comm7.jpeg" class="card-img-top pro_img" alt="...">
                     <div class="card-body" style="height: 180px;">
-                        <h5 class="card-title"> Ebere Estate</h5>
+                        <h5 class="card-title">Cologne</h5>
                         <p class="card-text">Some quick example text to build on the card title and make up the bulk of
                             the card’s content.</p>
                         <p><b>Price: $20K</b></p><br>
@@ -263,7 +263,7 @@
                 <div class="card shadow">
                     <img src="img/commercial/comm9.webp" class="card-img-top pro_img" alt="...">
                     <div class="card-body" style="height: 180px;">
-                        <h5 class="card-title"> Ebere Estate</h5>
+                        <h5 class="card-title">Frankfurt</h5>
                         <p class="card-text">Some quick example text to build on the card title and make up the bulk of
                             the card’s content.</p>
                         <p><b>Price: $20K</b></p>
