--- a/house.html
+++ b/house.html
@@ -145,7 +145,7 @@
                 <div class="card shadow">
                     <img src="img/new2.jpeg" class="card-img-top pro_img" alt="...">
                     <div class="card-body" style="height: 280px;">
-                        <h5 class="card-title"> Ebere Estate</h5>
+                        <h5 class="card-title">Achim</h5>
                         <p class="card-text">Some quick example text to build on the card title and make up the bulk of
                             the card’s content.</p>
                         <p><b>Price: $20K</b></p>
@@ -168,7 +168,7 @@
                 <div class="card shadow">
                     <img src="img/new9.jpeg" class="card-img-top pro_img" alt="...">
                     <div class="card-body" style="height: 280px;">
-                        <h5 class="card-title"> Ebere Estate</h5>
+                        <h5 class="card-title">Munchin</h5>
                         <p class="card-text">Some quick example text to build on the card title and make up the bulk of
                             the card’s content.</p>
                         <p><b>Price: $20K</b></p>
@@ -187,7 +187,7 @@
                 <div class="card shadow">
                     <img src="img/new4.jpg" class="card-img-top pro_img" alt="...">
                     <div class="card-body" style="height: 280px;">
-                        <h5 class="card-title"> Ebere Estate</h5>
+                        <h5 class="card-title">Berlin</h5>
                         <p class="card-text">Some quick example text to build on the card title and make up the bulk of
                             the card’s content.</p>
                         <p><b>Price: $20K</b></p>
@@ -206,7 +206,7 @@
                 <div class="card shadow">
                     <img src="img/new8.jpg" class="card-img-top pro_img" alt="...">
                     <div class="card-body" style="height: 280px;">
-                        <h5 class="card-title"> Ebere Estate</h5>
+                        <h5 class="card-title">Hanover</h5>
                         <p class="card-text">Some quick example text to build on the card title and make up the bulk of
                             the card’s content.</p>
                         <p><b>Price: $20K</b></p>
@@ -220,12 +220,12 @@
                             <a href="property_details.html" class="card-link btn btn-sm btn-primary">Details</a>
                         </center>
                     </div>
-                </div>
+                </div><br><br>
             </div> <!--col starts here--> <div class="col-md-4"> <!--col starts here-->
                 <div class="card shadow">
                     <img src="img/imgh3.webp" class="card-img-top pro_img" alt="...">
                     <div class="card-body" style="height: 280px;">
-                        <h5 class="card-title"> Ebere Estate</h5>
+                        <h5 class="card-title">Harmburg</h5>
                         <p class="card-text">Some quick example text to build on the card title and make up the bulk of
                             the card’s content.</p>
                         <p><b>Price: $20K</b></p><br>
