--- a/properties.html
+++ b/properties.html
@@ -147,7 +147,7 @@
                 <div class="card shadow">
                     <img src="img/new2.jpeg" class="card-img-top pro_img" alt="...">
                     <div class="card-body" style="height: 180px;">
-                        <h5 class="card-title"></h5>
+                        <h5 class="card-title">Lilienthal</h5>
                         <p class="card-text">Charming 4-Bedroom Villa in Lilienthal
                             🌍 Location: Bremen, Germany
                             .</p>
