--- a/dev.html
+++ b/dev.html
@@ -167,7 +167,7 @@
                 <div class="card shadow">
                     <img src="img/newdev/newdev4.jpeg" class="card-img-top pro_img" alt="...">
                     <div class="card-body" style="height: 180px;">
-                        <h5 class="card-title"> Ebere Estate</h5>
+                        <h5 class="card-title">Burg</h5>
                         <p class="card-text">Some quick example text to build on the card title and make up the bulk of
                             the card’s content.</p>
                         <p><b>Price: $20K</b></p>
@@ -186,7 +186,7 @@
                 <div class="card shadow">
                     <img src="img/newdev/newdev5.jpeg" class="card-img-top pro_img" alt="...">
                     <div class="card-body" style="height: 180px;">
-                        <h5 class="card-title"> Ebere Estate</h5>
+                        <h5 class="card-title">Findorf</h5>
                         <p class="card-text">Some quick example text to build on the card title and make up the bulk of
                             the card’s content.</p>
                         <p><b>Price: $20K</b></p>
@@ -205,7 +205,7 @@
                 <div class="card shadow">
                     <img src="img/newdev/newdev6.jpeg" class="card-img-top pro_img" alt="...">
                     <div class="card-body" style="height: 180px;">
-                        <h5 class="card-title"> Ebere Estate</h5>
+                        <h5 class="card-title">Bremerhaven</h5>
                         <p class="card-text">Some quick example text to build on the card title and make up the bulk of
                             the card’s content.</p>
                         <p><b>Price: $20K</b></p>
@@ -219,12 +219,12 @@
                             <a href="property_details.html" class="card-link btn btn-sm btn-primary">Details</a>
                         </center>
                     </div>
-                </div>
+                </div><br><br>
             </div> <!--col starts here--> <div class="col-md-4"> <!--col starts here-->
                 <div class="card shadow">
                     <img src="img/newdev/newdev8.jpeg" class="card-img-top pro_img" alt="...">
                     <div class="card-body" style="height: 180px;">
-                        <h5 class="card-title"> Ebere Estate</h5>
+                        <h5 class="card-title">Osterholz</h5>
                         <p class="card-text">Some quick example text to build on the card title and make up the bulk of
                             the card’s content.</p>
                         <p><b>Price: $20K</b></p><br>
@@ -243,7 +243,7 @@
                 <div class="card shadow">
                     <img src="img/newdev/newdev9.jpeg" class="card-img-top pro_img" alt="...">
                     <div class="card-body" style="height: 180px;">
-                        <h5 class="card-title"> Ebere Estate</h5>
+                        <h5 class="card-title">Vegesack</h5>
                         <p class="card-text">Some quick example text to build on the card title and make up the bulk of
                             the card’s content.</p>
                         <p><b>Price: $20K</b></p>
@@ -262,7 +262,7 @@
                 <div class="card shadow">
                     <img src="img/newdev/newdev9.jpeg" class="card-img-top pro_img" alt="...">
                     <div class="card-body" style="height: 180px;">
-                        <h5 class="card-title"> Ebere Estate</h5>
+                        <h5 class="card-title">Lesum</h5>
                         <p class="card-text">Some quick example text to build on the card title and make up the bulk of
                             the card’s content.</p>
                         <p><b>Price: $20K</b></p>
